packages/mycontexts/src/styles/www.css
.full-height {
  height: calc(100dvh - var(--bottom-navbar-height) - var(--top-navbar-height));
}

.full-mobile-height {
  height: var(--mobile-content-height)
}

.full-www-content-height {
  height: calc(100dvh - var(--bottom-navbar-height) - var(--top-navbar-height) - var(--who-header-height));
}

.chat-height {
  height: calc((100dvh - var(--bottom-navbar-height) - var(--top-navbar-height) - var(--who-header-height)) / 2);
}

/* Define the slide-in-from-right animation */
@keyframes slide-in-from-right {
  from {
    transform: translateX(+100%);
    opacity: 0;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}

/* Apply the slide-in-from-right animation */
.slide-in-from-right {
  animation: slide-in-from-right 1s ease-out forwards;
}

/* Define the slide-out-to-right animation */
@keyframes slide-out-to-right {
  from {
    transform: translateX(0);
    opacity: 0;
  }
  to {
    transform: translateX(+100%);
    opacity: 1;
  }
}

/* Apply the slide-out-to-right animation */
.slide-out-to-right {
  animation: slide-out-to-right 1s ease-out forwards;
}

/* Hide the caret icon for the NavDropdown toggle, but only in the top NavBar */
.hide-caret .dropdown-toggle::after {
  display: none;
}

.hide-caret {}

.scrollable-content {
  overflow-y: auto;
  overflow-x: hidden;
}

/* Override the text color of dropdown link text (a targeted change of the relevant CSS variable that is used in .dropdown-item) */
html body .dropdown-menu .dropdown-item {
  --bs-dropdown-link-color: var(--bs-primary); /* Uses Bootstrap's primary color */
  --bs-dropdown-link-hover-color: var(--bs-info-text);
}

/* Customize the ring around an element that receives focus */
:focus {
  outline-color: var(--bs-warning); /* Contrast with your bg-secondary */
}

.accordion-button:after {
  display: none;
}

/* Animating column width change for the www screen. */
.animated-column {
  transition: 
    flex-basis 0.6s ease-in-out, 
    width 0.6s ease-in-out, 
    padding 0.6s ease-in-out;
}
.accordion {
  --bs-accordion-body-padding-x: 0.5rem; /* Set your desired value here */
}

.container {
  --bs-gutter-x: 0.5rem; /* Set your desired value here */
}

.markdown {
  --markdown-padding-y: var(--bs-accordion-body-padding-y, 1rem);
  --markdown-padding-x: var(--bs-accordion-body-padding-x, 0.5rem);
  padding: var(--markdown-padding-y) var(--markdown-padding-x);
}

.content-top-aligned {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start; /* This is the key property for top alignment */
  height: 100%;  /* Take up all available height */
  width: 100%;   /* Take up all available width */
}

/* Maximizing the width of the title of the context */
/* Add to www.css */
.navbar-title {
  /* max-width: 60%; */
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  
  /* These properties ensure the text is centered but still shows ellipsis */
  text-align: center;
  margin: 0 auto;
}

/* SKIP LINK */
.skip-link {
  position: absolute;
  top: 0;
  left: 0;
  padding: 0.5rem;
  background: white;
  z-index: 10000;
}

.skip-link:not(:focus) {
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  white-space: nowrap;
  position: absolute;
}

/* FLIPPING TITLE */
.cursor-pointer {
  cursor: pointer;
}

.navbar-title h1 {
  transition: all 0.3s ease;
}

.navbar-title h1:hover {
  opacity: 0.9;
}

@media (max-width: 576px) {
  .navbar-title h1 {
    /* max-width: 180px; */
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

